update ui for introduce

--- a/assets/scss/_default.scss
+++ b/assets/scss/_default.scss
@@ -257,11 +257,17 @@
     .font-12-desktop {
         font-size: 12px !important;
     }
+    .font-14-desktop {
+        font-size: 14px !important;
+    }
     .font-28-desktop {
         font-size: 28px !important;
     }
     .font-21-desktop {
         font-size: 21px !important;
+    }
+    .font-24-desktop {
+        font-size: 24px !important;
     }
     .font-40-desktop {
         font-size: 40px !important;
@@ -292,6 +298,15 @@
     }
     .mt-316-desktop {
         margin-top: 316px !important;
+    }
+    .mt-4r-desktop {
+        margin-top: 4rem !important;
+    }
+    .mt-5r-desktop {
+        margin-top: 5rem !important;
+    }
+    .mt-6r-desktop {
+        margin-top:6rem !important;
     }
     .mb-20-desktop {
         margin-bottom: 20px !important;
