--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1955,10 +1955,14 @@ blockquote {
     font-size: 13px !important; }
   .font-12-desktop {
     font-size: 12px !important; }
+  .font-14-desktop {
+    font-size: 14px !important; }
   .font-28-desktop {
     font-size: 28px !important; }
   .font-21-desktop {
     font-size: 21px !important; }
+  .font-24-desktop {
+    font-size: 24px !important; }
   .font-40-desktop {
     font-size: 40px !important; }
   .font-48-desktop {
@@ -1979,6 +1983,12 @@ blockquote {
     margin-top: 34px !important; }
   .mt-316-desktop {
     margin-top: 316px !important; }
+  .mt-4r-desktop {
+    margin-top: 4rem !important; }
+  .mt-5r-desktop {
+    margin-top: 5rem !important; }
+  .mt-6r-desktop {
+    margin-top: 6rem !important; }
   .mb-20-desktop {
     margin-bottom: 20px !important; } }
 
@@ -3005,3 +3015,71 @@ blockquote {
 
 .introduce-content {
   background-color: #F6F7FB; }
+  .introduce-content-left-top {
+    background-color: #ffffff;
+    padding: 25px; }
+    @media (max-width: 767px) and (min-width: 575px) {
+      .introduce-content-left-top {
+        padding: 10px; } }
+    .introduce-content-left-top ul > li {
+      padding: 25px 0; }
+      .introduce-content-left-top ul > li:not(:last-child) {
+        border-bottom: 1px solid #DEDEDE; }
+      .introduce-content-left-top ul > li:last-child {
+        padding-bottom: 0; }
+      .introduce-content-left-top ul > li a {
+        text-transform: uppercase;
+        font-size: 16px;
+        color: #2C405A;
+        font-weight: 600; }
+  .introduce-content-left-bottom {
+    background-color: #ffffff;
+    padding: 25px; }
+    @media (max-width: 767px) and (min-width: 575px) {
+      .introduce-content-left-bottom {
+        padding: 10px; } }
+    .introduce-content-left-bottom ul > li {
+      padding: 25px 0; }
+      .introduce-content-left-bottom ul > li:not(:last-child) {
+        border-bottom: 1px solid #DEDEDE; }
+      .introduce-content-left-bottom ul > li p {
+        font-size: 16px;
+        color: #2C405A;
+        font-weight: 700;
+        text-transform: capitalize; }
+  .introduce-content-right {
+    background-color: #fff;
+    padding: 25px; }
+    @media (max-width: 767px) and (min-width: 575px) {
+      .introduce-content-right {
+        padding: 10px; } }
+    .introduce-content-right-item {
+      padding-bottom: 25px;
+      border-bottom: 1px solid #DEDEDE; }
+      .introduce-content-right-item .title {
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box !important;
+        overflow: hidden; }
+      .introduce-content-right-item .description {
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        display: -webkit-box !important;
+        overflow: hidden; }
+      .introduce-content-right-item:not(:first-child) {
+        padding-top: 25px; }
+      .introduce-content-right-item .time {
+        color: #839CB0;
+        font-size: 14px; }
+      .introduce-content-right-item .btn-see-detail {
+        padding: 3px 21px;
+        background-color: #5287ED;
+        border-radius: 40px;
+        border: 0;
+        color: #fff; }
+    .introduce-content-right .btn-see-more {
+      background-color: #5287ED;
+      padding: 10px 40px;
+      border: 0;
+      border-radius: 40px;
+      color: #fff; }
