--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@ html {
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */ }
+  html a:hover, html button:hover {
+    cursor: pointer; }
   html:-webkit-scrollbar {
     display: none; }
 
@@ -454,6 +456,14 @@ p {
 
 .pb-170 {
   padding-bottom: 170px; }
+
+.py-20-important {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important; }
+
+.py-15-important {
+  padding-top: 15px !important;
+  padding-bottom: 15px !important; }
 
 .py-30 {
   padding-top: 30px;
@@ -1947,6 +1957,8 @@ blockquote {
     font-size: 17px !important; }
   .font-18-desktop {
     font-size: 18px !important; }
+  .font-20-desktop {
+    font-size: 20px !important; }
   .font-15-desktop {
     font-size: 15px !important; }
   .font-16-desktop {
@@ -2001,6 +2013,15 @@ blockquote {
     font-size: 12px !important; }
   .font-mobile-10 {
     font-size: 10px !important; } }
+
+.bg-lightBlue {
+  background-color: #5287ED !important; }
+
+.text-blue {
+  color: #5287ED; }
+
+.bg-lighterBlue {
+  background-color: #EDF1FF !important; }
 
 /*----------------------------------------*/
 /*  10. Header
@@ -3091,3 +3112,34 @@ blockquote {
     font-size: 16px;
     color: #839CB0;
     font-weight: 600; }
+
+.fee .text-link {
+  color: #5287ED;
+  text-decoration: underline;
+  cursor: pointer; }
+
+.fee ul > li {
+  margin-bottom: 8px;
+  list-style-type: disc;
+  display: list-item; }
+
+.fee-header {
+  background: url(../images/introduce/bg-header.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.fee-content {
+  padding: 46px 0; }
+  .fee-content-step-image {
+    height: 160px;
+    width: 160px;
+    background-color: #5287ED;
+    border-radius: 100rem; }
+    @media (min-width: 992px) {
+      .fee-content-step-image {
+        height: 160px;
+        width: 160px; } }
+    @media (min-width: 768px) and (max-width: 991px) {
+      .fee-content-step-image {
+        height: 120px;
+        width: 120px; } }
