--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -6,6 +6,11 @@
 /*-- Common Style --*/
 
 html {
+  a,button{
+    &:hover{
+      cursor: pointer;
+    }
+  }
   // scroll-behavior: smooth;
   &:-webkit-scrollbar {
     display: none;
@@ -535,6 +540,14 @@ p {
 }
 
 .py {
+  &-20-important {
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+  }
+  &-15-important {
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+  }
   &-30 {
     padding-top: 30px;
     padding-bottom: 30px;
