--- a/assets/scss/_default.scss
+++ b/assets/scss/_default.scss
@@ -245,6 +245,9 @@
     .font-18-desktop {
         font-size: 18px !important;
     }
+    .font-20-desktop {
+        font-size: 20px !important;
+    }
     .font-15-desktop {
         font-size: 15px !important;
     }
@@ -326,4 +329,13 @@
     .font-mobile-10 {
         font-size: 10px !important;
     }
+}
+.bg-lightBlue{
+background-color: #5287ED !important;
+}
+.text-blue{
+   color: #5287ED;
+}
+.bg-lighterBlue{
+background-color: #EDF1FF !important;
 }
